# semlayer

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: schema.md
docs/decisions/: 0001-semantic-model-schema.md
docs/examples/: schema-example.yaml
examples/ecommerce/: README.md  semantic_model.yaml
src/semlayer/: __init__.py  _graph.py  cli.py  describe.py  lineage.py  loader.py  models.py  query.py  validator.py
tests/: test_cli.py  test_describe.py  test_examples.py  test_lineage.py  test_loader.py  test_package.py  test_query.py  test_validator.py
