[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "semlayer"
version = "0.1.0"
description = "A declarative semantic layer for defining entities, dimensions, metrics, and relationships over your data."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Nicolas Pogeant" }]
dependencies = ["pyyaml>=6.0"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[tool.hatch.build.targets.wheel]
packages = ["src/semlayer"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
